cmake_minimum_required(VERSION 3.1)
project(gason)

set (CMAKE_CXX_STANDARD 11)
if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR- /D_HAS_EXCEPTIONS=0")
    add_compile_options(/W3)
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
    endif()
    add_compile_options(-Wall -Wextra)
endif()


add_library(gason STATIC src/gason.h src/gason.cpp src/gason_write.h src/gason_write.cpp)
link_libraries(gason)
add_executable(test-suite src/test-suite.cpp)
add_executable(gasonpp src/pretty-print.cpp)
add_executable(benchmark src/benchmark.cpp)
target_include_directories(benchmark PRIVATE rapidjson/include)
